# df_to_sql

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb
src/df_to_sql/: __init__.py  data_frame_to_sql.py  df_to_sql.ipynb  df_to_sql.py  logger.py  main.py  utils.py
tests/: main.ipynb  sqlite.db  test_df_to_sql.ipynb
