[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "df_to_sql"
version = "2.0.0"
authors = [
  { name="Adam Patterson", email="adam@faranalytics.net" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic >= 1.8.*",
    "pandas >= 1.*",
    "SQLAlchemy >= 1.4.*"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faranalytics/df_to_sql.git"
"Bug Tracker" = "https://github.com/faranalytics/df_to_sql/issues"