[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "df_to_sql"
dynamic = ["version"]
authors = [
  { name="Adam Patterson", email="adam@faranalytics.net" },
]
description = "DataFrame to SQL facilitates importing Pandas DataFrames into SQL databases.  It automates table and type migrations and deduplication of records."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.8.0, <2",
    "pandas>=1.0.0, <2",
    "SQLAlchemy>=1.4.0, <2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faranalytics/df_to_sql.git"
"Bug Tracker" = "https://github.com/faranalytics/df_to_sql/issues"

[tool.hatch.version]
path = "src/df_to_sql/__about__.py"